修改顺时针流水和逆时针流水效果

--- a/爱心流水灯code/Objects/proj.build_log.htm
+++ b/爱心流水灯code/Objects/proj.build_log.htm
@@ -3,13 +3,13 @@
 <pre>
 <h1>礦ision Build Log</h1>
 <h2>Tool Versions:</h2>
-IDE-Version: μVision V5.41.0.0
-Copyright (C) 2024 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: 1 1, 1, LIC=21NXV-PAH5W-949S2-94P59-VZYPR-MRWXI
+IDE-Version: μVision V5.42.0.0
+Copyright (C) 2025 ARM Ltd and ARM Germany GmbH. All rights reserved.
+License Information: 1 xiao, 1, LIC=----
  
 Tool Versions:
-Toolchain:       PK51 Prof. Developers Kit  Version: 9.60.7.0
-Toolchain Path:  C:\SOFTWARE\Keil\Core\C51\BIN
+Toolchain:       PK51 Prof. Develpers Kit  Version: 9.60.7.0
+Toolchain Path:  D:\software\keil\core\C51\BIN
 C Compiler:      C51.exe V9.60.7.0
 Assembler:       A51.exe V8.2.7.0
 Linker/Locator:  BL51.exe V6.22.4.0
@@ -18,17 +18,17 @@ Hex Converter:   OH51.exe V2.7.0.0
 CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
-D:\三职\大二上\爱心流水灯\爱心流水灯\proj.uvproj
-Project File Date:  12/11/2024
+D:\下载\爱心流水灯\爱心流水灯code\proj.uvproj
+Project File Date:  04/09/2025
 
 <h2>Output:</h2>
 Build target 'Target_1'
 compiling main.c...
 linking...
-Program Size: data=13.0 xdata=0 code=1601
+Program Size: data=15.0 xdata=0 code=1709
 creating hex file from ".\Objects\proj"...
 ".\Objects\proj" - 0 Error(s), 0 Warning(s).
-Build Time Elapsed:  00:00:00
+Build Time Elapsed:  00:00:01
 </pre>
 </body>
 </html>
