--- a/爱心流水灯code/Objects/proj.build_log.htm
+++ b/爱心流水灯code/Objects/proj.build_log.htm
@@ -5,10 +5,10 @@
 <h2>Tool Versions:</h2>
 IDE-Version: μVision V5.42.0.0
 Copyright (C) 2025 ARM Ltd and ARM Germany GmbH. All rights reserved.
-License Information: 1 xiao, 1, LIC=----
+License Information: 1 xiao, 1, LIC=03LZX-HGQF6-6DTKF-6WXEU-PC1LY-SMJV3
  
 Tool Versions:
-Toolchain:       PK51 Prof. Develpers Kit  Version: 9.60.7.0
+Toolchain:       PK51 Prof. Developers Kit  Version: 9.60.7.0
 Toolchain Path:  D:\software\keil\core\C51\BIN
 C Compiler:      C51.exe V9.60.7.0
 Assembler:       A51.exe V8.2.7.0
@@ -19,12 +19,13 @@ CPU DLL:         S8051.DLL V3.125.1.0
 Dialog DLL:      DP51.DLL V2.69.0.0 
 <h2>Project:</h2>
 D:\下载\爱心流水灯\爱心流水灯code\proj.uvproj
-Project File Date:  04/09/2025
+Project File Date:  04/11/2025
 
 <h2>Output:</h2>
 Build target 'Target_1'
+compiling main.c...
 linking...
-Program Size: data=17.0 xdata=0 code=2018
+Program Size: data=17.0 xdata=0 code=2379
 creating hex file from ".\Objects\proj"...
 ".\Objects\proj" - 0 Error(s), 0 Warning(s).
 Build Time Elapsed:  00:00:00
